# GraphicsRenderer

./: CMakeLists.txt  Makefile  README.md  output.ppm
InputFiles/: checkerboard.ppm  logoMaterial.mtl  textured-cornell-box.mtl
libs/mylib/: BasicShapeDrawer.cpp  BasicShapeDrawer.h  Camera.cpp  Camera.h  Interpolate.cpp  Interpolate.h  Material.cpp  Material.h  PhotonMap.cpp  PhotonMap.h  RaySimulation.cpp  RaySimulation.h  Readers.cpp  Readers.h  Renderer.cpp  Renderer.h  TextureDrawer.cpp  TextureDrawer.h  TriangleUtilities.cpp  TriangleUtilities.h  tests.cpp
libs/sdw/: ModelTriangle.cpp  ModelTriangle.h  RayTriangleIntersection.cpp  RayTriangleIntersection.h
outputAnimation/: 0_.ppm  100_.ppm  101_.ppm  102_.ppm  103_.ppm  104_.ppm  105_.ppm  106_.ppm  107_.ppm  108_.ppm  109_.ppm  10_.ppm  110_.ppm  111_.ppm  112_.ppm  113_.ppm  114_.ppm  115_.ppm  116_.ppm  117_.ppm  118_.ppm  119_.ppm  11_.ppm  12_.ppm  13_.ppm  14_.ppm  15_.ppm  16_.ppm  17_.ppm  18_.ppm  19_.ppm  1_.ppm  20_.ppm  21_.ppm  22_.ppm  23_.ppm  24_.ppm  25_.ppm  26_.ppm  27_.ppm  (+80 more)
src/: GraphicsRenderer.cpp
